@@ -1,58 +1,50 @@
 package br.com.rafaelvieira.bytehub.domain.util;
 
-
 import org.springframework.context.ApplicationContextException;
 
 import java.lang.reflect.ParameterizedType;
-import java.util.function.Function;
+import java.util.Optional;
+import java.util.stream.Collectors;
+import java.util.stream.StreamSupport;
 
 public abstract class ConvertTo<E, D> {
 
-    protected E entity;
+    /*
+        Convert entity to DTO. Implement this method in subclasses.
+     */
+    public abstract Optional<D> convertToDto(E entity);
 
     /*
-        Example:
-        return DTO.builder()
-            .id(entity.getId())
-            .property1(entity.getProperty1())
-            .property2(entity.getProperty2())
-            .build();
+        Convert DTO to entity. Implement this method in subclasses.
      */
-    public D convertToDto(E entity) {
-        return null;
+    public abstract Optional<E> convertToEntity(D dto);
+
+    /*
+        Convert Iterable<E> to Iterable<D>.
+     */
+    public Iterable<D> convert(Iterable<E> entities) {
+        return StreamSupport.stream(entities.spliterator(), false)
+                .map(this::convertToDto)
+                .filter(Optional::isPresent)
+                .map(Optional::get)
+                .collect(Collectors.toList());
     }
 
     /*
-        Example:
-        return Entity.builder()
-            .id(dto.getId())
-            .property1(dto.getProperty1())
-            .property2(dto.getProperty2())
-            .build();
+        Copy DTO to entity. This method is protected as it's intended to be used internally by subclasses.
      */
-    public E convertToEntity(D dto) {
-        return null;
-    }
-
-    /**
-     * Copy dto from entity
-     * @param entity
-     */
-    protected E copyDtoToEntity(D dto) {
-        Class<E> persistentClass = (Class<E>) ((ParameterizedType) getClass().getGenericSuperclass()).getActualTypeArguments()[1];
+    protected Optional<E> copyDtoToEntity(D dto) {
+        Class<E> persistentClass = (Class<E>) ((ParameterizedType) getClass().getGenericSuperclass()).getActualTypeArguments()[0];
+        E entity;
         try {
-            entity = persistentClass.newInstance();
-        } catch (InstantiationException | IllegalAccessException e) {
-            throw new ApplicationContextException(String.valueOf(e));
+            entity = persistentClass.getDeclaredConstructor().newInstance();
+        } catch (Exception e) {
+            throw new ApplicationContextException("Failed to create a new instance of " + persistentClass.getSimpleName(), e);
         }
 
-        Function<E, D> function = this::convertToDto;
-        function.apply(entity);
-        return entity;
+        return convertToEntity(dto).map(e -> {
+            // Here you can copy properties from dto to entity if needed
+            return e;
+        });
     }
-
-    public Iterable<D> convert(Iterable<E> entities) {
-        return null;
-    }
-
 }
